services/web-ui/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
  labels:
    app: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-ui
  template:
    metadata:
      labels:
        app: web-ui
    spec:
      containers:
        - name: web-ui
          image: "registry.sXXXXXXX-at-student-dhbw-mannheim-de.users.dhbw.site/web-ui:latest"
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
