services/web-ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui
spec:
  type: ClusterIP
  selector:
    app: web-ui
  ports:
    - port: 80
      targetPort: 80
